--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Sailing -- Juvenile fiction'
 - !lcsh 'Voyages and travels -- Juvenile fiction'
 - !lcsh 'Brothers and sisters -- Juvenile fiction'
+- GITenberg
 title: 'The Search for the Silver City: A Tale of Adventure in Yucatan'
 url: http://www.gutenberg.org/ebooks/21268
